--- a/css/static_style.css
+++ b/css/static_style.css
@@ -251,6 +251,383 @@
  *                                 	 
  ******************************************************************************************************/
 /******************************************************************************************************
+ *            DYNAMIC STYLE FOR style-86a48be4-tkh1pl04 version 1.0
+ *                                 	 
+ ******************************************************************************************************/
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .title-holder  {
+		
+						text-align: center;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .Title  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .Body h1  { 
+						color: #8a7373;
+						
+						letter-spacing: 0.15em;
+						
+						font-family: open-sans;
+						font-size:calc( 10px + ( 36rem - 10rem ) );
+						font-weight: bold;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04  .preview-content-holder  {
+		
+						margin-right: 30px;
+						
+						padding-bottom: 0px;
+						
+						text-align: left;
+						
+						max-width: 400px;
+						
+						padding-right: 0px;
+						
+						margin-top: 40px;
+						
+						margin-left: 30px;
+						
+						padding-top: 0px;
+						
+						margin-bottom: 40px;
+						
+						background-color: rgba(0, 0, 0, 0);
+						
+						padding-left: 0px;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .item-content:not(.blocks_layout)  {
+		
+						background-color: rgb(239, 239, 239);
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-divider  {
+		
+						margin-bottom: 10px;
+						
+						border-color: rgb(0, 0, 0);
+						
+						margin-top: 5px;
+						
+						width: 20%;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .inner-pic  {
+		
+						opacity: 0.83;
+						
+						color: rgb(0, 0, 0);
+						
+		    			-webkit-filter:none;filter:none;	
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 #pagination-holder  {
+		
+						font-style: italic;
+						font-size:calc( 10px + ( 17rem - 10rem ) );
+						color: rgb(76, 76, 76);
+						
+						padding-bottom: 5px;
+						
+						border-color: rgb(85, 85, 85);
+						
+						border-width: 1px;
+						
+						padding-right: 15px;
+						
+						padding-left: 15px;
+						
+						padding-top: 5px;
+						
+						margin-bottom: 40px;
+						
+						font-family: 'Times New Roman';
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .multi_layout .helper-div.middle-center .pic-side  {
+		
+						margin-left: -6%;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .multi_layout .helper-div.middle-center  {
+		
+						padding-left: 6%;
+						
+						padding-right: 6%;
+						
+						width: 88%;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .background-div  {
+			
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04.master.item-box   {
+		
+						background-color: rgb(255, 255, 255);
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-title  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-body h1  { 
+						font-family: Montserrat;
+						font-size:calc( 10px + ( 14rem - 10rem ) );
+						text-transform: uppercase;
+						
+						color: rgb(0, 0, 0);
+						
+						letter-spacing: 0.05em;
+						
+						margin-top: 5px;
+						
+						margin-bottom: 10px;
+						
+						line-height: 1.2em;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04.master.item-box   {
+		
+						padding-left: 6%;
+						
+						width: 88%;
+						
+						padding-right: 6%;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-item-links span  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 #sr-basket-widget *  { 
+						font-family: Arial;
+						font-size:calc( 10px + ( 10rem - 10rem ) );
+						text-transform: uppercase;
+						
+						color: rgb(77, 77, 77);
+						
+						padding-bottom: 10px;
+						
+						border-color: rgb(77, 77, 77);
+						
+						letter-spacing: 0.1em;
+						
+						padding-right: 15px;
+						
+						margin-top: 20px;
+						
+						padding-left: 15px;
+						
+						border-radius: 0px;
+						
+						padding-top: 10px;
+						
+						margin-bottom: 10px;
+						
+						border-width: 1px;
+						
+						background-color: rgba(0, 0, 0, 0);
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .blocks-preview-body  {
+		
+						line-height: 1.4em;
+						font-size:calc( 10px + ( 14rem - 10rem ) );	
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .stripe-background  {
+		
+						margin-left: -6%;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-element.icon-source  {
+		
+						margin-bottom: 10px;
+						
+						margin-top: 10px;
+						
+						width: 50px;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .blocks-preview-content-holder  {
+		
+						margin-bottom: 40px;
+						
+						margin-top: 50px;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .background-image-div  {
+		
+						color: rgb(0, 0, 0);
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .Subtitle  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .Body h2  { 
+						font-family: ralewaythin;
+						font-size:calc( 10px + ( 22rem - 10rem ) );	
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04.item-box > .item-wrapper   {
+		
+						max-width: 2000px;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .blocks-preview-subtitle  {
+		
+						color: rgb(106, 106, 106);
+						font-size:calc( 10px + ( 16rem - 10rem ) );
+						font-family: Raleway;
+						
+						margin-top: 10px;
+						
+						margin-bottom: 10px;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-item-links span:before  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .effect-tester  { 
+						background-color: rgb(77, 77, 77);
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04  .preview-content-wrapper  {
+		
+						text-align: left;
+						
+						vertical-align: middle;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-price  {
+		
+						color: rgb(255, 255, 255);
+						
+						font-family: Arial;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-item-links span:hover  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-element.Link.hover-tester  { 
+						color: rgb(255, 255, 255);
+						
+						background-color: rgb(77, 77, 77);
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .subtitle-holder  {
+		
+						text-align: center;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .inner-pic-holder  {
+		
+						background-color: rgb(0, 0, 0);
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .blocks-preview-divider  {
+		
+						color: rgb(0, 0, 0);
+						
+						border-color: rgb(0, 0, 0);
+						
+						border-bottom-width: 1px;
+						
+						margin-top: 5px;
+						
+						margin-bottom: 10px;
+						
+						width: 10%;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .blocks-preview-title  {
+		
+						line-height: 1.1em;
+						font-size:calc( 10px + ( 18rem - 10rem ) );
+						text-transform: uppercase;
+						
+						color: rgb(0, 0, 0);
+						
+						letter-spacing: -0.05em;
+						
+						margin-top: 10px;
+						
+						margin-bottom: 10px;
+						
+						font-family: Montserrat;
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-body  {
+		
+						line-height: 1.4em;
+						font-size:calc( 10px + ( 12rem - 10rem ) );
+						color: rgb(106, 106, 106);
+						
+						max-width: 500px;
+						
+						margin-top: 10px;
+						
+						margin-bottom: 10px;
+						
+						font-family: Arial;
+							
+		}
+	
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .blocks-preview-item-links .Link  {
+		
+						text-decoration: underline;
+						font-size:calc( 10px + ( 20rem - 10rem ) );	
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .pic-side:after  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .item-effect-tester  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .sub.item-box:after  { 
+						background-color: rgb(234, 229, 217);
+							
+		}
+	 .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-subtitle  ,  .style-635c3955-akddbsak .style-86a48be4-tkh1pl04 .preview-body h2  { 
+						font-family: Montserrat;
+						font-size:calc( 10px + ( 12rem - 10rem ) );
+						text-transform: uppercase;
+						
+						color: rgb(106, 106, 106);
+						
+						letter-spacing: 0em;
+						
+						margin-right: 0px;
+						
+						margin-top: 10px;
+						
+						margin-left: 0px;
+						
+						margin-bottom: 5px;
+						
+						line-height: 1.4em;
+							
+		}
+
+/******************************************************************************************************
+ *            UNIQUE STYLE
+ *                                 	 
+ ******************************************************************************************************/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/******************************************************************************************************
+ *            WEBSITE STYLE
+ *                                 	 
+ ******************************************************************************************************/
+/******************************************************************************************************
  *            DYNAMIC STYLE FOR style-ccbd68bf-p9dgcwsg version 1.0
  *                                 	 
  ******************************************************************************************************/
@@ -1180,9 +1557,9 @@
 		
 						padding-left: 6%;
 						
-						padding-right: 6%;
-						
 						width: 88%;
+						
+						padding-right: 6%;
 							
 		}
 	 .style-635c3955-akddbsak .style-10c4f162-cg3tfm0k.master.item-box   {
@@ -1191,8 +1568,8 @@
 							
 		}
 	 .style-635c3955-akddbsak .style-10c4f162-cg3tfm0k .preview-title  ,  .style-635c3955-akddbsak .style-10c4f162-cg3tfm0k .preview-body h1  { 
-						font-family: "Playfair Display";
-						font-size:calc( 10px + ( 95rem - 10rem ) );
+						line-height: 0.8em;
+						font-size:calc( 10px + ( 80rem - 10rem ) );
 						color: rgb(0, 0, 0);
 						
 						letter-spacing: 0.0em;
@@ -1203,7 +1580,7 @@
 						
 						margin-bottom: 10px;
 						
-						line-height: 0.8em;
+						font-family: "Playfair Display";
 						
 						background-color: rgba(255, 255, 255, 0);
 							
@@ -1240,9 +1617,9 @@
 		
 						color: rgb(255, 255, 255);
 						
-						width: 150px;
-						
 						margin-bottom: 15px;
+						
+						width: 150px;
 							
 		}
 	 .style-635c3955-akddbsak .style-10c4f162-cg3tfm0k .background-image-div  {
@@ -1282,7 +1659,7 @@
 		}
 	 .style-635c3955-akddbsak .style-10c4f162-cg3tfm0k .preview-body  {
 		
-						font-family: Arial;
+						line-height: 1.4em;
 						font-size:calc( 10px + ( 14rem - 10rem ) );
 						color: rgba(244, 244, 244, 0.909804);
 						
@@ -1294,7 +1671,7 @@
 						
 						margin-bottom: 45px;
 						
-						line-height: 1.4em;
+						font-family: Arial;
 							
 		}
 	
@@ -1310,7 +1687,7 @@
 							
 		}
 	 .style-635c3955-akddbsak .style-10c4f162-cg3tfm0k .preview-subtitle  ,  .style-635c3955-akddbsak .style-10c4f162-cg3tfm0k .preview-body h2  { 
-						line-height: 1.1em;
+						font-family: "Playfair Display";
 						font-size:calc( 10px + ( 16rem - 10rem ) );
 						color: rgb(255, 255, 255);
 						
@@ -1324,7 +1701,7 @@
 						
 						margin-bottom: 10px;
 						
-						font-family: "Playfair Display";
+						line-height: 1.1em;
 						
 						background-color: rgba(0, 0, 0, 0);
 							
